# crewFinance

./: .env  .gitignore  LICENSE  README.md  logs.txt  pyproject.toml
crew_crew_project/: Agents.py  Tasks.py  run.py
crew_sockets_project/: model_client.py  model_config.py  model_setting.py  server.py  tool_client.py
crew_tools_project/: .env  Tool_algorithms.py  Tool_exa_search.py  Tool_finance.py  Tool_scrapegraph.py  Tool_serper.py
